提交注册成功
用户注册邮箱校验及注册成功个人资料完善页面提交

--- a/FE/css/init.css
+++ b/FE/css/init.css
@@ -184,7 +184,7 @@ html{overflow-y:scroll; overflow-x:hidden;}
 
 
 a:link, a:visited {
-    color: #666;
+    color: #4176aa;
     text-decoration: none;
     cursor: pointer;
 }
