--- a/lry_webapp/src/main/webapp/resources/css/init.css
+++ b/lry_webapp/src/main/webapp/resources/css/init.css
@@ -184,7 +184,7 @@ html{overflow-y:scroll; overflow-x:hidden;}
 
 
 a:link, a:visited {
-    color: #666;
+    color: #4176aa;
     text-decoration: none;
     cursor: pointer;
 }
