--- a/lry_webapp/src/main/webapp/resources/css/init.css
+++ b/lry_webapp/src/main/webapp/resources/css/init.css
@@ -20,6 +20,8 @@ textarea{resize:none}
 
 fieldset, img {
     border: 0;
+    font-size: 0;
+    line-height: 0;
 }
 
 address, caption, cite, code, dfn, em, strong, th, var, i {
