--- a/FE/css/regist.css
+++ b/FE/css/regist.css
@@ -33,6 +33,8 @@
 
 /*form_mail_box*/
 .form_mail_box , .form_success_box{ width: 700px; margin: 10px auto; padding:0 20px;}
+.form_mail_box p{ font-size: 14px; color: #666;}
+.form_mail_box h1{ font-size: 24px; color: #333; margin-bottom: 10px;}
 .form_mail_box h2{ font-size: 14px; color: #333; font-weight: bold; margin-bottom: 10px;}
 .form_mail_box h3{ font-size: 14px; color: #666; height: 30px; line-height: 30px; margin-bottom: 30px;}
 .form_mail_box .btn{ margin-right: 20px;}
