--- a/FE/css/waper.css
+++ b/FE/css/waper.css
@@ -4,10 +4,7 @@
  * 20140705
  */
 .waper_box{ max-width: 1200px; min-width: 960px; margin: 30px auto;}
-
 .waper_box h1.warper_tt{ font-size: 30px; color: #333; padding-left: 40px; margin-bottom: 30px; position: relative;}
-
-.yj_icon{ background-image: url(../imgs/main_sp.png); background-repeat: no-repeat;}
 
 .warper_tab{ height: 40px; line-height: 40px; border-bottom: 1px solid #d3d3d3; margin-bottom: 20px;}
 .warper_tab li{height: 39px; line-height: 39px; float: left; font-size: 14px; color: #333; padding: 0 30px; border-radius: 3px;}
@@ -18,9 +15,7 @@
 .yj_icon{ background-position: -833px -55px;}
 
 .yj_list{ width: 1240px;}
-
 .yj_list .yj_item{ float: left; width: 570px; margin:0 20px 20px 0; background: #fff; padding:10px; box-shadow: 0 0 7px #c7c7c7;}
-
 .yj_list .yj_item > dl{ position: relative; width: 570px; height: 370px; overflow: hidden;}
 .yj_list .yj_item > dl > dd{}
 .yj_list .yj_item > dl > dd img{ display: block; width: 570px; height: 370px;}
@@ -41,7 +36,6 @@
 .author_detail dl dt{ position: absolute; width: 60px; top:0; left:0;}
 .author_detail dl dt.add_form{ left:222px; top:2px; z-index:40;}
 .author_detail dl dt img , .planner_face img{ display: block; width: 45px; height: 45px; padding: 2px; border: 1px solid #ccc;}
-
 .author_detail dl dd{ padding-top: 5px;}
 .author_detail dl dd p{ margin-top: 5px;}
 .author_detail dl dd p span{ margin-right: 10px; color: #333;}
@@ -81,5 +75,12 @@
 .planner_item .planner_yj_list .planner_yj_detail .right li a{ color: #305d8a; position: absolute; left:0; top:0;}
 .planner_item .planner_yj_list .planner_yj_detail .right li a:hover{ text-decoration: underline;}
 .planner_item .planner_yj_list .planner_yj_detail .right li span{ position: absolute; right:0; top:0; color: #9b9b9b;}
+
+
+/*搜索*/
+.search_icon{ background-position: -832px -232px;}
+.no_result{ font-size: 24px; color: #6e6e6e; text-align: center; padding:130px 0;}
+
+
 
 
