增加创建游记页面
创建游记页面+上传接口调试

--- a/FE/css/main.css
+++ b/FE/css/main.css
@@ -4,15 +4,16 @@
  */
 .box{ max-width: 1200px; min-width: 800px; margin: 0 auto; display: block;}
 /*main_sp*/
-#city , #search_btn , .user_more , .tag_ico , .tag_ico_r , .share_box h3 , .share_box ul li a , #min_share li a , .suc_ico , .label li i.close , .ico , .vip_ico , .add_btn , .msg_btn , .plan_area li a , .yj_icon , .search_icon{ background-image: url(../imgs/main_sp.png); background-repeat: no-repeat;}
+#city , #search_btn , .user_more , .tag_ico , .tag_ico_r , .share_box h3 , .share_box ul li a , #min_share li a , .suc_ico , .label li i.close , .ico , .vip_ico , .add_btn , .msg_btn , .plan_area li a , .yj_icon , .search_icon , .create_icon , .add_yj_photo , .uploadify-button{ background-image: url(../imgs/main_sp.png); background-repeat: no-repeat;}
 
 .blue , .blue a{ color: #364758;}
 
-.btn{ font-size: 18px; color: #fff !important; padding: 8px 25px; text-align: center; border-radius: 3px; }
+.btn{ font-size: 18px; color: #fff !important; padding: 8px 25px; text-align: center; border-radius: 3px; border:0;}
 .blue_btn{ background: #364758;}
 .blue_btn:hover{ background:#1f2f3e;}
 .big_btn{ padding:12px 25px;}
 
+.rq{ color: #e20000; margin-right: 5px;}
 
 .success{ color: #99c700;}
 .suc_ico{ padding-left: 40px; background-position: -832px -8px; height: 35px; line-height: 35px; font-size: 24px;}
@@ -23,10 +24,13 @@
 .ft_14{ font-size: 14px; color: #666 !important;}
 .form_notice{ font-size: 12px; color:#a6a6a6 !important;}
 
-
-.input_220 , .input_70 , .input_100{ height: 34px; line-height: 34px; padding:0 5px; width: 210px; background:#fafafa; border:1px solid #ddd; font-size: 14px; margin-right: 15px;}
+.label_box{ margin-bottom: 5px;}
+.input_220 , .input_70 , .input_100 , .input_620{ height: 34px; line-height: 34px; padding:0 5px; width: 210px; background:#fafafa; border:1px solid #ddd; font-size: 14px; margin-right: 15px;}
 .input_70{ width: 60px; }
 .input_100{ width: 98%; }
+.input_620{ width: 620px;}
+
+.uploadify-button{ display: block; width: 95px!important; height: 50px; line-height: 50px; padding-left: 60px; color: #fff !important;background-position: -817px -572px; font-size: 16px; background-color: #364758; border-radius: 4px;}
 
 .textarea{background:#fafafa; border:1px solid #ddd; font-size: 14px;  padding:5px; width: 98%; height: 120px;}
 .select{background:#fafafa; border:1px solid #ddd; font-size: 14px;  padding:5px; width: 100px;}
