--- a/lry_webapp/src/main/webapp/resources/css/main.css
+++ b/lry_webapp/src/main/webapp/resources/css/main.css
@@ -42,7 +42,7 @@
 .add_btn{ display: block; width: 55px; height: 22px; line-height: 22px; color: #fff;  background-position: -4px -404px;}
 .msg_btn{ display: block; width: 55px; height: 22px; line-height: 22px; color: #fff;  background-position: -4px -437px;}
 
-/*可策划地区*/
+/*可规划地区*/
 .plan_area{ margin: 10px 0; position: relative; padding-left: 80px; height: 22px;}
 .plan_area dt{ position: absolute; top:0; left:0;}
 .plan_area dd{}
