--- a/lry_webapp/src/main/webapp/resources/css/regist.css
+++ b/lry_webapp/src/main/webapp/resources/css/regist.css
@@ -26,13 +26,15 @@
 #form_code{ position: absolute; top:5px; left:75px;}
 #changeCode{ position: absolute; top:0; left:160px;}
 
-.reg_code_tr .Validform_checktip{ margin-left: 155px;}
+.reg_code_tr .Validform_checktip , .login_code_tr .Validform_checktip{ margin-left: 155px;}
 
 
 #get_pwd{ margin-left: 20px; color: #364758; text-decoration: underline;}
 
 /*form_mail_box*/
 .form_mail_box , .form_success_box{ width: 700px; margin: 10px auto; padding:0 20px;}
+.form_mail_box p{ font-size: 14px; color: #666;}
+.form_mail_box h1{ font-size: 24px; color: #333; margin-bottom: 10px;}
 .form_mail_box h2{ font-size: 14px; color: #333; font-weight: bold; margin-bottom: 10px;}
 .form_mail_box h3{ font-size: 14px; color: #666; height: 30px; line-height: 30px; margin-bottom: 30px;}
 .form_mail_box .btn{ margin-right: 20px;}
