--- a/FE/css/main.css
+++ b/FE/css/main.css
@@ -4,7 +4,7 @@
  */
 .box{ max-width: 1200px; min-width: 800px; margin: 0 auto; display: block;}
 /*main_sp*/
-#city , #search_btn , .user_more , .tag_ico , .tag_ico_r , .share_box h3 , .share_box ul li a , #min_share li a , .suc_ico , .label li i.close , .ico , .vip_ico , .add_btn , .msg_btn , .plan_area li a , .yj_icon , .search_icon , .create_icon , .add_yj_photo , .uploadify-button , .add_fav i , .added_fav i , .J_moveUp , .J_moveDown , .J_delete , #create_success h2{ background-image: url(../imgs/main_sp.png); background-repeat: no-repeat;}
+#city , #search_btn , .user_more , .tag_ico , .tag_ico_r , .share_box h3 , .share_box ul li a , #min_share li a , .suc_ico , .label li i.close , .ico , .vip_ico , .vip_b_ico , .add_btn , .msg_btn , .plan_area li a , .yj_icon , .search_icon , .create_icon , .add_yj_photo , .uploadify-button , .add_fav i , .added_fav i , .J_moveUp , .J_moveDown , .J_delete , #create_success h2 , .like_ico , .share_ico , .liked_ico , .weibo_ico , .qq_t_ico , .rr_ico{ background-image: url(../imgs/main_sp.png); background-repeat: no-repeat;}
 
 .blue , .blue a{ color: #364758;}
 .g9{ color: #999 !important;}
@@ -35,13 +35,23 @@
 .textarea{background:#fafafa; border:1px solid #ddd; font-size: 14px;  padding:5px; width: 98%; height: 120px;}
 .select{background:#fafafa; border:1px solid #ddd; font-size: 14px;  padding:5px; width: 100px;}
 
-.ico{ padding-left: 18px; margin-right: 10px;}
+.ico{ padding-left: 20px; margin-right: 10px;}
 .icon_time{ background-position: -847px -432px;}
 .icon_eye{ background-position: -847px -461px;}
 .up_ico{ display:block; width:12px; height: 12px; background-position: -7px -370px;}
 .vip_ico{ padding-right: 20px;  background-position: right -492px;}
+.vip_b_ico{ padding-right: 30px;  background-position: right -865px;}
 .add_btn{ display: block; width: 55px; height: 22px; line-height: 22px; color: #fff;  background-position: -4px -404px;}
 .msg_btn{ display: block; width: 55px; height: 22px; line-height: 22px; color: #fff;  background-position: -4px -437px;}
+
+.like_ico{ color: #666 !important; background-position: 0px -476px;}
+.liked_ico{ background-position: 0px -544px;}
+.share_ico{ color: #666 !important; background-position:  -1px -505px;}
+.weibo_ico{background-position:  -2px -575px;}
+.qq_t_ico{background-position:  -2px -605px;}
+.rr_ico{background-position:  -1px -634px;}
+
+
 
 /*可策划地区*/
 .plan_area{ margin: 10px 0; position: relative; padding-left: 80px; height: 22px;}
