--- a/FE/css/waper.css
+++ b/FE/css/waper.css
@@ -93,7 +93,7 @@
 #u_yj_list > li{ padding:10px; background: #eee; position: relative; padding-left: 320px;  height: 190px; margin-bottom: 20px;}
 .u_yj_imgDetail{ display: block; width: 285px; height: 190px; position: absolute; left:10px; top:10px;}
 .u_yj_txtDetail{ padding-top: 10px;}
-.u_yj_txtDetail h2 a{ font-size: 16px; display: block; color: #364758; font-weight: bold; height: 36px; line-height: 36px;}
+.u_yj_txtDetail h2 a{ font-size: 16px; display: inline-block; color: #364758; font-weight: bold; height: 36px; line-height: 36px;}
 .u_yj_txtDetail p{ font-size: 12px; color: #333; line-height: 20px;}
 .u_yj_author{ position: relative; margin-top: 20px; padding-top: 1px;}
 .u_yj_author img{ display: block; width: 26px; height: 26px; position: absolute; top:0 ; left:0;}
@@ -129,3 +129,16 @@
 
 .u_msg_details{ font-size: 14px; color: #333; line-height: 22px; margin-top: 10px; width: 80%;}
 
+/*个人主页*/
+#my_box{ position: relative; padding: 10px 0 0 180px; margin-bottom: 20px;}
+#my_box .author_img{ position: absolute; left:0; top:0; padding: 3px; border: 1px solid #ccc; background: #fff;}
+#my_box .author_img img{ display: block; width: 140px; height: 140px;}
+#my_box .authot_info h2.vip_b_ico{ display: inline-block; height: 40px; background-position: right -855px;}
+#my_box .authot_info h2 a{ font-size: 30px; line-height: 40px; color: #333 !important;}
+#my_box .authot_info .my_add{ position: absolute; top:20px; right:10px;}
+#my_box .authot_info .my_add span{ font-weight: bold; color: #364758; margin: 2px 15px 0 0;}
+#my_box #author_produ{ color: #999; line-height: 22px;}
+#my_box .plan_area dt{ font-weight: bold; font-size: 12px; color: #333;}
+#my_box .btn_s{ margin-left: 10px;}
+#my_box .msg_btn{ position: relative; cursor: default;}
+#my_box .msg_btn .msgForm{ top:30px;}
