--- a/FE/css/waper.css
+++ b/FE/css/waper.css
@@ -147,3 +147,26 @@
 #my_box .btn_s{ margin-left: 10px;}
 #my_box .msg_btn{ position: relative; cursor: default;}
 #my_box .msg_btn .msgForm{ top:30px;}
+
+/*个人资料*/
+#u_profile_box{ margin: 20px 0;}
+#u_profile_box .u_info_tab{width: 110px; margin:20px 0 0 30px;}
+#u_profile_box .u_info_tab li{ width: 110px; height: 46px; line-height: 46px; margin-bottom: 2px; text-align: center; font-size: 14px;}
+#u_profile_box .u_info_tab li a{ display: block; width: 110px; text-align: center;}
+#u_profile_box .u_info_tab .cur{ background: #fff; border-top-left-radius:5px; -moz-border-radius-topleft:5px; -webkit-border-top-left-radius:5px; border-bottom-left-radius:5px; -moz-border-radius-bottomleft:5px; -webkit-border-bottom-left-radius:5px;}
+#u_profile_box .u_info_form_box{ background: #fff; border-radius: 4px; padding:40px 60px; margin-top: 10px; width: 900px;}
+#u_profile_box .u_info_form_box table tr td{ height: 46px; line-height: 46px;}
+#u_profile_box .u_info_form_box table tr td .ft_14{ margin-right: 15px;}
+
+.u_face_img{ position: relative; height: 160px !important;}
+.u_face_img img{ display: inline-block; padding:3px; border: 1px solid #f0f0f0;  position: absolute; bottom: 10px;}
+#u_now_face_l{ width: 140px; height: 140px; left:0px;}
+#u_now_face_m{ width: 80px; height: 80px; left:160px;}
+#u_now_face_s{ width: 24px; height: 24px; left:260px;}
+
+
+
+.u_info_form_box .uploadify-button{ background: url(../imgs/user/u_face_input.png) left top no-repeat; width: 391px !important;}
+
+
+
