--- a/lry_webapp/src/main/webapp/resources/css/detail.css
+++ b/lry_webapp/src/main/webapp/resources/css/detail.css
@@ -5,22 +5,56 @@
  */
 .youji_detail_main{ margin: 10px auto;}
 .bread_box{ width: 100%; height: 46px; line-height: 46px; font-size: 14px;}
-.detail_main_box{ border: 1px solid #ff0;}
-.detail_main_box .detail_left{ border: 1px solid #f00; width: 745px; padding: 20px 40px;}
-.detail_main_box .detail_right{ border: 1px solid #f00; padding: 20px; width: 315px; background: #fff;}
+.detail_main_box{}
+.detail_main_box .detail_left{width: 745px; padding: 20px 40px; position: relative;}
 
 .detail_main_box .detail_left h1{ font-size: 24px; color: #333; text-align: center; margin-bottom: 20px; overflow: hidden;}
-.detail_main_box .detail_left h2{ padding: 7px 15px ; border-top:1px solid #e3e3e3; border-bottom:1px solid #e3e3e3;}
+.detail_main_box .detail_left h2{ padding: 7px 15px ; border-top:1px solid #e3e3e3; border-bottom:1px solid #e3e3e3; position: relative;}
 .detail_main_box .detail_left h2 .left{ color: #999; margin-top: 5px;}
 .detail_main_box .detail_left h2 .left i{ color: #333; margin-right: 10px;}
 .detail_main_box .detail_left h2 .right a{ padding: 5px 15px 5px 10px; color: #364758; text-align: center;}
 .add_fav i{ background-position: -858px -630px;display: inline-block; width: 8px; height: 8px; padding: 3px; margin-right: 3px;}
 .added_fav i{ background-position: -858px -658px;display: inline-block; width: 8px; height: 8px; padding: 3px; margin-right: 3px;}
 
-.youji_detail_list{ width: 660px; margin: 20px auto;}
-.detail_item{ width: 640px; padding:10px; background: #fff; overflow: hidden; border-bottom: 1px solid #ccc;}
-.detail_img{ width: 640px; overflow: hidden; position: relative; font-size: 0; line-height: 0; text-align: center;}
+.youji_detail_list{ width: 660px; margin: 20px auto 40px;}
+.detail_item{ width: 640px; padding:10px; background: #fff; overflow: hidden; border-bottom: 1px solid #ccc; margin-bottom: 20px;}
+.detail_img{ width: 640px; overflow: hidden; position: relative; font-size: 0; line-height: 0; text-align: center; background: url(../imgs/detail/detail_nopic.gif) center center no-repeat #6788a9;}
 .detail_img .img_memb{ position: absolute; width: 640px; height: 15px; left:0; bottom:0; background: url(../imgs/detail_img_memb.png) left top no-repeat;}
 .detail_item img{ max-width: 640px; text-align: center;}
+.detail_info{ padding: 10px 10px 20px;  position: relative;}
+.detail_info .left{ color: #666;}
+.detail_info .right{}
+.detail_info .detail_img_info{ margin-bottom: 10px; line-height: 20px; }
+.share_dialogbox{ position: absolute; right:9px; bottom:12px; background: #fff; padding: 5px; display: none;}
+.share_dialogbox a{ display: inline-block; width: 22px; height: 22px;text-indent: -2000px;}
+
+.bdsharebuttonbox{ position: fixed; top:300px; width: 25px;}
+.bdshare-button-style0-24 a, .bdshare-button-style0-24 .bds_more{ margin:5px 0 0 0 !important;}
+
+
+/*detail_right*/
+.detail_main_box .detail_right{width: 353px;}
+.detail_right_box{padding: 20px; background: #fff; margin-bottom: 20px;}
+#detail_author{ position: relative;}
+.author_img{ margin-right: 10px;}
+.author_img img{ display: block; width: 140px; height: 140px; padding: 3px; border: 1px solid #f0f0f0;}
+.authot_info{ position: absolute; top:5px; left:160px;}
+.authot_info h2{font-size: 20px; color: #333;}
+.authot_info p{ margin: 10px 0;}
+.authot_info .btn_s{ margin-left: 10px;}
+
+#author_produ{ margin-top: 10px; color: #666; line-height: 22px;}
+.plan_area{ height: auto !important;}
+
+.detail_right_list{ margin:20px 0 20px; padding-top: 10px; border-top: 1px solid #ccc;}
+.detail_right_list h3{ font-size: 12px; color: #666; font-weight: bold; margin-bottom: 10px;}
+.detail_right_list ul{}
+.detail_right_list ul li{ height: 26px; overflow: hidden; line-height: 26px; padding-left: 5px; list-style: disc inside;}
+.detail_right_list ul li.yj_more{ text-align: right; list-style: none; text-decoration: underline;}
+
+#detail_right_ad_1{}
+
+
+
 
 
